--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,13 @@ dependencies:
   go_router: ^12.0.1
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
-  dartz: ^0.10.1
   dio: ^5.3.3
   firebase_core: ^2.21.0
+  firebase_auth: ^4.12.1
+  either_dart: ^1.0.0
+  intl: ^0.18.1
+  skeletons: ^0.0.3
+  firebase_database: ^10.3.3
 
 dev_dependencies:
   flutter_test:
@@ -65,9 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
